Physics containers + Particle and billboard gameobjects

--- a/OUAN/OUAN/OUAN.vcproj
+++ b/OUAN/OUAN/OUAN.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="OUAN"
 	ProjectGUID="{AFEE2E6F-C32A-4DBC-A1B1-ABCC3EA43F23}"
 	RootNamespace="OUAN"
@@ -325,6 +325,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\Src\Game\GameObject\GameObjectBillboardSet.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\Src\Game\GameObject\GameObjectEye.cpp"
 						>
 					</File>
@@ -342,6 +346,10 @@
 					</File>
 					<File
 						RelativePath=".\Src\Game\GameObject\GameObjectOny.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\Src\Game\GameObject\GameObjectParticleSystem.cpp"
 						>
 					</File>
 					<File
@@ -559,6 +567,10 @@
 						>
 					</File>
 					<File
+						RelativePath=".\Src\Game\GameObject\GameObjectBillboardSet.h"
+						>
+					</File>
+					<File
 						RelativePath=".\Src\Game\GameObject\GameObjectEye.h"
 						>
 					</File>
@@ -576,6 +588,10 @@
 					</File>
 					<File
 						RelativePath=".\Src\Game\GameObject\GameObjectOny.h"
+						>
+					</File>
+					<File
+						RelativePath=".\Src\Game\GameObject\GameObjectParticleSystem.h"
 						>
 					</File>
 					<File
