--- a/OUAN/Config/Plugins-dbg.cfg
+++ b/OUAN/Config/Plugins-dbg.cfg
@@ -6,6 +6,6 @@ PluginFolder=.
 # Define plugins
 Plugin=RenderSystem_Direct3D9_d.dll
 Plugin=RenderSystem_GL_d.dll
-
+Plugin=Plugin_ParticleFX_d.dll
 
 
