--- a/trunk/OUAN/Config/resources.cfg
+++ b/trunk/OUAN/Config/resources.cfg
@@ -15,4 +15,5 @@ FileSystem=../../Resources/Graphics/Overlays
 FileSystem=../../Resources/Graphics/Particles
 FileSystem=../../Resources/Graphics/GUI
 FileSystem=../../Resources/Levels
+DFileSystem=../../Resources/Levels/GameObjects
 
