- Pause/Game over states now functional. At the moment, press Q to force a GameOver event. While at the game over state, the reload/weapon action key (R) will go back to menu. Jump or Pause will restart the GameRunningState.

--- a/OUAN/OUAN/OUAN.vcproj
+++ b/OUAN/OUAN/OUAN.vcproj
@@ -242,6 +242,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Src\Core\GameOverState.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Src\Core\GamePausedState.cpp"
 					>
 				</File>
@@ -593,6 +597,10 @@
 				</File>
 				<File
 					RelativePath=".\Src\Core\GameOptionsState.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Src\Core\GameOverState.h"
 					>
 				</File>
 				<File
