--- a/OUAN/OUAN/OUAN.vcproj
+++ b/OUAN/OUAN/OUAN.vcproj
@@ -229,6 +229,10 @@
 					RelativePath=".\Src\Loader\LevelLoader.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\Src\Loader\XMLGameObjectParser.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Core"
@@ -585,6 +589,10 @@
 				</File>
 				<File
 					RelativePath=".\Src\Loader\LevelLoader.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Src\Loader\XMLGameObjectParser.h"
 					>
 				</File>
 			</Filter>
