--- a/OUAN/OUAN/OUAN.vcproj
+++ b/OUAN/OUAN/OUAN.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="OUAN"
 	ProjectGUID="{AFEE2E6F-C32A-4DBC-A1B1-ABCC3EA43F23}"
 	RootNamespace="OUAN"
@@ -901,6 +901,14 @@
 				>
 				<File
 					RelativePath=".\Src\Event\Event.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Src\Event\EventDefs.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Src\Event\EventHandler.h"
 					>
 				</File>
 				<File
